Add containerization-ready Judge0 integration with comprehensive TDD
Judge0 Client Implementation:
- Create Docker-first Judge0 API client with comprehensive error handling
- Add 23 test cases covering all execution scenarios and edge cases
- Support environment-driven configuration for flexible deployment
- Implement retry logic with exponential backoff and rate limiting
- Add health checks and monitoring for container orchestration
- Support both self-hosted and cloud Judge0 deployments

Hybrid Execution System:
- Integrate Judge0 client with existing execution engine
- Maintain backward compatibility with all existing 15 tests
- Add automatic fallback from Judge0 to mock execution for testing
- Store Judge0 tokens and execution metadata in database
- Implement service health monitoring and status reporting

Configuration System:
- Add comprehensive environment variable configuration
- Support Docker Compose service names (http://judge0:2358)
- Auto-detect deployment environment (local/Docker/cloud)
- Provide configuration validation and error handling
- Update .env.example with Docker-ready setup options

Architecture Features:
- Clean separation between execution interface and implementation
- Lazy initialization of Judge0 client for better testing
- Type-safe configuration with comprehensive TypeScript interfaces
- Service monitoring and statistics collection
- Graceful degradation when execution service unavailable

Container Readiness:
- Health check endpoints for Docker monitoring
- Service discovery compatible URLs
- Environment-based configuration switching
- Production-ready error handling and logging

--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,27 @@ DATABASE_URL=local.db
 
 MAGIC_LINK_SECRET=dev-only-change-me
 
-JUDGE0_URL=
+# Judge0 Code Execution Service Configuration
+# Choose one of the following setups:
+
+# Option 1: Local Docker Development (Recommended)
+# Use this for local development with Docker Compose
+JUDGE0_URL=http://judge0:2358
+# JUDGE0_AUTH_TOKEN is optional for self-hosted Judge0
+
+# Option 2: Local Development (Judge0 on localhost) 
+# Use this if running Judge0 directly on your machine
+# JUDGE0_URL=http://localhost:2358
+
+# Option 3: Cloud Service (RapidAPI)
+# Use this for production with hosted Judge0 service  
+# JUDGE0_URL=https://judge0-ce.p.rapidapi.com
+# JUDGE0_AUTH_TOKEN=your-rapidapi-key-here
+
+# Judge0 Configuration (Optional - uses sensible defaults)
+JUDGE0_TIMEOUT=10000          # Request timeout in milliseconds
+JUDGE0_MAX_RETRIES=3          # Maximum retry attempts  
+JUDGE0_POLLING_INTERVAL=1000  # Polling interval in milliseconds
+
+# Legacy environment variable (mapped to JUDGE0_AUTH_TOKEN)
 JUDGE0_KEY=
