--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "db:push": "drizzle-kit push",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "db:seed": "echo '🌱 To seed the database, set SEED_DB=true and visit http://localhost:5173 or run: SEED_DB=true npm run dev'"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.5",
